# letit_python

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml
letit/: __init__.py  client.py  settings.py
letit/resources/: blog.py  job.py  micropost.py
letit/schemas/: blog.py  common.py  job.py  micropost.py
letit/tests/: test_letit_integration.py  test_letit_unit.py
