[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "letit"
# version = "0.0.3" # Test
version = "0.0.1" # Prod
description = "Python SDK for the LetIt API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  # "httpx>=0.27.0"
  "requests>=2.32.0"
]

[tool.setuptools.packages.find]
include = ["letit*"]
